[package]

name = "kontrak-sqlite"
version = "0.1.3"
license = "Apache-2.0/MIT"
authors = ["Henry Syahputra"]
repository = "https://github.com/hsputra/kontrak-sqlite"
description = "The package provides an interface to SQLite."
readme = "README.md"
categories = ["api-bindings", "database"]
keywords = ["database"]

[features]
default = ["linkage"]
linkage = ["sqlite3-sys/linkage"]

[dependencies]
libc = "0.2"

[dependencies.sqlite3-sys]
version = "0.12"
default-features = false

[dev-dependencies]
temporary = "0.6"
